# hyperon-experimental

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  conan_profile.txt  conan_provider.cmake  environment.yaml  index.html  mkdocs.metta  mkdocs.yml  objects.inv  test
c/: CMakeLists.txt  Cargo.toml  annotated.html  cbindgen.toml  classes.html  conanfile.py  conanfile.txt  dir_1784a01aa976a8c78ef5dfc3737bcac8.html  dir_56e1cc0469511739d3f1b1a2ce87cd96.html  dir_7f3038a560b29c067ef1a03ca4b2d4d7.html  dir_882f1502d5feb85c6b6d31017e2524d9.html  dir_9a6bbff06f1c31bd23faa309259c83e4.html  dir_c16e19cad15c7819bac9a816b5aa8553.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_v.html  globals_w.html  group__atom__group.html  group__atom__vec__group.html  group__environment__group.html  (+78 more)
c/doc/: mainpage.md
c/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+55 more)
c/src/: atom.rs  lib.rs  metta.rs  module.rs  serial.rs  space.rs  util.rs
c/tests/: CMakeLists.txt  c_space.c  c_space.h  check_atom.c  check_grounding_space.c  check_runner.c  check_sexpr_parser.c  check_sexpr_space.c  check_space.c  check_types.c  int_gnd.c  int_gnd.h  test.c  test.h  util.c  util.h
hyperon-atom/: Cargo.toml
hyperon-atom/src/: bool.rs  gnd.rs  iter.rs  lib.rs  matcher.rs  number.rs  serial.rs  str.rs  subexpr.rs
hyperon-atom/tests/: macros.rs
hyperon-space/: Cargo.toml
hyperon-space/benches/: atom_index.rs
hyperon-space/src/: lib.rs
lib/: .gitignore  Cargo.toml
lib/benches/: grounding_space.rs  interpreter2.rs  interpreter_minimal.rs  states.rs  type.rs
lib/examples/: custom_match.rs  load_space.rs  sorted_list.rs
lib/src/: arithmetics.rs  common.rs  interpreter.rs  lib.rs  matcher.rs  tests.rs  text.rs  types.rs
lib/tests/: case.rs  macros.rs  metta.rs  space.rs  test_stdlib.metta  types.rs
python/: .gitignore  CMakeLists.txt  FindPythonInstallPrefix.cmake  README.md  VERSION  build-wheels.sh  conanfile.py  conanfile.txt  hyperonpy.cpp  install-hyperonc.bat  install-hyperonc.sh  pyproject.toml  requirements.txt  setup.py  setup.py.in
python/hyperon/: __init__.py  __version__.py  _version.py  atoms.py  base.py  conversion.py  ext.py  metta.py  module.py  regex_objects.py  runner.py  stdlib.py
python/integration/: test_bio_das.metta  test_das.metta  test_torch.py
python/sandbox/: test_gnd_conv.metta
python/tests/: CMakeLists.txt  common.py  common_old.py  error_pyext.py  extension.py  extention.py  metta.py  pyfile_test_mod.py  test_atom.py  test_atom_type.py  test_bindings.py  test_builtin_mods.py  test_case.py  test_common.py  test_custom_space.py  test_environment.py  test_examples.py  test_extend.py  test_grounded_type.py  test_grounding_space.py  test_high_func_type.py  test_include.metta  test_list_definition.py  test_load.metta  test_load.py  test_metta.py  test_minecraft.py  test_minelogy.py  test_modules.py  test_nondeterm.py  test_pln_tv.py  test_run_metta.py  test_sexparser.py  test_stdlib.py  test_torch.py  test_unification.py
repl/: Cargo.toml
repl/src/: config.default.metta  config_params.rs  interactive_helper.rs  main.rs  metta_shim.rs  py_shim.py  repl.default.metta
rust/: Cargo.toml  README.md  chyperon.c  crates.js  help.html  settings.html  src-files.js
rust/capi/: .gitignore  CMakeLists.txt  Cargo.toml  README.md
rust/hyperon/: all.html  index.html  sidebar-items.js
rust/hyperon_atom/: all.html  enum.Atom.html  enum.ExecError.html  fn.make_variables_unique.html  fn.match_by_equality.html  fn.match_by_string_equality.html  fn.rust_type_atom.html  index.html  macro.bind.html  macro.bind_set!.html  macro.bind_set.html  macro.expr.html  macro.sym.html  sidebar-items.js  struct.AtomIter.html  struct.AtomIterMut.html  struct.ExpressionAtom.html  struct.SymbolAtom.html  struct.VariableAtom.html  trait.AutoGroundedType.html  trait.ConvertingSerializer.html  trait.CustomExecute.html  trait.CustomGroundedType.html  trait.CustomMatch.html  trait.Grounded.html  trait.GroundedAtom.html  type.BoxedIter.html
rust/hyperon_common/: all.html  enum.FlexRef.html  index.html  macro.assert_eq_metta_results!.html  macro.assert_eq_metta_results.html  macro.assert_eq_no_order!.html  macro.assert_eq_no_order.html  sidebar-items.js  struct.CachingMapper.html
rust/hyperon_macros/: all.html  index.html  macro.metta!.html  macro.metta.html  macro.metta_const!.html  macro.metta_const.html  sidebar-items.js
rust/hyperon_space/: all.html  constant.ATOM_TYPE_SPACE.html  constant.COMMA_SYMBOL.html  enum.SpaceEvent.html  fn.complex_query.html  index.html  sidebar-items.js  struct.DynSpace.html  struct.SpaceCommon.html  struct.SpaceObserverRef.html  trait.Space.html  trait.SpaceMut.html  trait.SpaceObserver.html  trait.SpaceVisitor.html
rust/hyperonc/: all.html  index.html  sidebar-items.js
rust/lib/: Cargo.toml
rust/metta_repl/: all.html  fn.main.html  fn.show_welcome_message.html  fn.start_interactive_mode.html  index.html  sidebar-items.js  static.SIGINT_RECEIVED_COUNT.html  struct.CliArgs.html  struct.EnterKeyHandler.html
rust/search.index/: 00b5d37cffb0.js  01b525b2dc01.js  01ead80e6f5b.js  024d708b6ffe.js  0259dfa04a16.js  026539b399ae.js  027ac6954fee.js  02d38f707228.js  037334a06802.js  0384d7949e13.js  04d86f9f6e5a.js  (+306 more)
(+1133 files in other folders)
