[workspace]
members = [
    "hyperon-common",
    "hyperon-atom",
    "hyperon-space",
    "lib",
    "c",
    "repl",
]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"

[workspace.dependencies]
hyperon = { path = "./lib", version = "0.2.6" }
hyperon-common = { path = "./hyperon-common", version = "0.2.6" }
hyperon-atom = { path = "./hyperon-atom", version = "0.2.6" }
hyperon-space = { path = "./hyperon-space", version = "0.2.6" }

regex = "1.11.0"
log = "0.4.0"
env_logger = "0.8.4"

[profile.release]
strip = "symbols"
