[package]
name = "hyperonc"
version.workspace = true
edition.workspace = true

[dependencies]
hyperon-common = { workspace = true }
hyperon = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lib]
name = "hyperonc"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]
