[package]
name = "hyperon-space"
version.workspace = true
edition.workspace = true

[dependencies]
hyperon-atom = { workspace = true }
hyperon-common = { workspace = true }

log = { workspace = true }
smallvec = "1.10.0"
bimap = "0.6.3"
lazy_static = "1.5.0"

[dev-dependencies]
hyperon = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]
