[build-system]
requires = ["setuptools==65.6.3", "conan==1.60.1", "cmake==3.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperon"
version = "0.1.4"
description = "Hyperon API in Python"
requires-python = ">=3.7"
keywords = ["metta", "hyperon", "opencog"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    'importlib-metadata==6.6.0; python_version<"3.8"',
]

[project.scripts]
metta = "hyperon.metta:main"

[project.optional-dependencies]
dev = [
    "build==0.10.0",
    "pytest==7.3.2",
]

[tool.setuptools]
packages = [ "hyperon" ]
package-dir = { "hyperon" = "hyperon" }

[tool.cibuildwheel]
before-all = "sh -c ./python/install-hyperonc.sh"
# no Rust toolchain is available for musllinux-i686 environment
skip = "*-musllinux_i686"
test-requires = ["pytest==7.3.2"]
test-command = "pytest {project}/python/tests"
