[build-system]
# setuptools >68.0.0 is incompatible with macos-13
# setuptools_scm >7.1.0 is incompatible with Python 3.7
# urllib3 >=2.0.0 is incompatible with OpenSSL <1.1.1+ which is used by cp37-manylinux_x86_64 wheel
requires = ["setuptools==68.0.0", "conan==2.13.0", "urllib3==1.26.20", "cmake==3.24", "setuptools_scm[toml]==7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperon"
description = "Hyperon API in Python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["metta", "hyperon", "opencog"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dynamic = [
    "version",
]

[project.scripts]
metta = "hyperon.metta:main"
metta-py = "hyperon.metta:main"

[project.optional-dependencies]
dev = [
    "build==0.10.0",
    "pytest==7.3.2",
]

[tool.setuptools]
packages = [ "hyperon" ]
package-dir = { "hyperon" = "hyperon" }

[tool.cibuildwheel]
before-all = "sh -c ./python/install-hyperonc.sh"
# There is no Rust toolchain is available for musllinux-i686 environment.
# Other musllinux platforms are opted out to decrease the build time.
skip = "*musllinux*"
test-requires = ["pytest==7.3.2"]
test-command = "pytest {project}/python/tests"
